--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,5 +1,7 @@
 :root {
-  --primary-color: #ffffff;
+  --primary-color: #fff;
+  --section-padding-vertical: 10px;
+  --section-padding-horizontal: 150px;
 }
 
 section {
@@ -10,7 +12,9 @@ section {
   grid-auto-flow: column;
 
   background-color: rgb(123, 199, 199);
-  padding: 100px;
+  padding: var(--section-padding-vertical) var(--section-padding-horizontal);
+
+  height: calc(100vh - var(--section-padding-vertical));
 }
 
 img {
@@ -18,6 +22,13 @@ img {
 }
 
 h1 {
-  font-size: 50px;
+  font-size: 60px;
   text-transform: uppercase;
+}
+
+button {
+  padding: 10px 30px;
+  border: none;
+
+  border-radius: 30px;
 }
