--- a/styles/styles.css
+++ b/styles/styles.css
@@ -19,24 +19,11 @@ html{
   font-family: var(--text-font); 
 }
 
-section {
-  display: grid;
-
-  place-items: center;
-  grid-auto-columns: minmax(0, 1fr);
-  grid-auto-flow: column;
-  padding: var(--section-padding-vertical) var(--section-padding-horizontal);
-
+section{
+  padding: var(--section-padding-vertical) var(--section-padding-horizontal); 
   height: calc(100vh - var(--section-padding-vertical));
 }
-
-section > div {
-  display: flex;
-  flex-direction: column;
-
-  gap: 20px;
-}
-
+ 
 img {
   width: 500px;
 }
@@ -61,7 +48,21 @@ button {
   font-family: var(--text-font); 
 }
 
-/* Classes  */
+/* Classes  */ 
+.main-section {
+  display: grid; 
+  place-items: center;
+  grid-auto-columns: minmax(0, 1fr);
+  grid-auto-flow: column; 
+}
+
+.main-section > div {
+  display: flex;
+  flex-direction: column;
+
+  gap: 20px;
+}
+
 .main-section__description{
   color: var(--text-color-gray);
 } 
@@ -83,6 +84,7 @@ button {
   width: 12px;
   border-radius: 50px;
 
+  text-align: center;
 
   border: 1px solid var(--primary-color);
 }
@@ -147,4 +149,18 @@ button {
 .card__description{
   text-align: center;
   color: var(--text-color-gray);
+}
+
+.gallery-section{
+  display: flex;
+  flex-direction: column;
+
+  gap: 20px;
+  background-color: grey;
+}
+
+.gallery-section__header{
+  display: flex;
+  
+  justify-content: space-between;
 }
