feat: Galeria quase pronta, iniciando a seção "sobre-nos"

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -18,10 +18,6 @@
 html{ 
   font-family: var(--text-font); 
 } 
- 
-img {
-  width: 500px;
-}
 
 h1 {
   font-size: 60px;
@@ -42,6 +38,10 @@ button {
   font-weight: 700;
   font-family: var(--text-font);
   text-transform: capitalize;
+}
+
+figure{
+  display: inline-block;
 }
 
 /* Classes  */ 
@@ -73,6 +73,10 @@ button {
 
   place-items: center;
   color: var(--primary-color);
+}
+
+.section-image{
+  width: 500px;
 }
 
 .youtube-button__icon{
@@ -170,4 +174,15 @@ button {
 .gallery-section__show-more-button-container{
   display: grid;
   place-items: center;
+}
+
+.gallery-section__gallery-container{
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  max-height: 100%;
+  overflow: hidden;
+}
+
+.gallery-container__gallery-image{
+  max-width: 100%;
 }
