feat: Iniciando a secao de doacoes

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -71,6 +71,7 @@ strong{
 .section-description{
   color: var(--text-color-gray);
   line-height: 30px;
+  text-align: justify;
 } 
 
 .main-section__youtube-button{
