--- a/styles/styles.css
+++ b/styles/styles.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap");
 
 :root {
   /* --preview-color: rgb(0, 197, 247); */
@@ -6,18 +6,18 @@
   --primary-color: rgb(var(--primary-color-base));
   --primary-color-transparent: rgba(var(--primary-color-base), 0.15);
 
-  --text-color-dark: rgb(59,59,59);
-  --text-color-gray: rgb(153,153,153);
+  --text-color-dark: rgb(59, 59, 59);
+  --text-color-gray: rgb(153, 153, 153);
 
   --section-padding-vertical: 10px;
   --section-padding-horizontal: 150px;
 
-  --text-font:'Montserrat', "arial";
+  --text-font: "Montserrat", "arial";
 }
 
-html{ 
-  font-family: var(--text-font); 
-} 
+html {
+  font-family: var(--text-font);
+}
 
 h1 {
   font-size: 60px;
@@ -40,22 +40,22 @@ button {
   text-transform: capitalize;
 }
 
-figure{
+figure {
   display: inline-block;
 }
 
-strong{ 
+strong {
   background-color: transparent;
-  color:var(--primary-color);
+  color: var(--primary-color);
   font-weight: 600;
 }
 
-/* Classes  */ 
+/* Classes  */
 .main-section {
-  display: grid; 
+  display: grid;
   place-items: center;
   grid-auto-columns: minmax(0, 1fr);
-  grid-auto-flow: column; 
+  grid-auto-flow: column;
 
   padding: 10px var(--section-padding-horizontal);
   height: calc(100vh - 10px);
@@ -68,26 +68,26 @@ strong{
   gap: 20px;
 }
 
-.section-description{
+.section-description {
   color: var(--text-color-gray);
   line-height: 30px;
   text-align: justify;
-} 
+}
 
-.main-section__youtube-button{
+.main-section__youtube-button {
   background-color: transparent;
-   
+
   gap: 10px;
 
   place-items: center;
   color: var(--primary-color);
 }
 
-.section-image{
+.section-image {
   width: 500px;
 }
 
-.youtube-button__icon{
+.youtube-button__icon {
   padding: 8px;
   margin-left: 5px;
 
@@ -106,7 +106,7 @@ strong{
 
   box-shadow: 0 0 30px var(--primary-color);
 
-  transition: .25s;
+  transition: 0.25s;
 }
 
 .cards-container {
@@ -137,10 +137,10 @@ strong{
   justify-content: center;
 }
 
-.card__icon{
+.card__icon {
   aspect-ratio: 1;
   width: 55px;
-  
+
   display: grid;
   place-items: center;
 
@@ -153,40 +153,40 @@ strong{
   background-color: var(--primary-color-transparent);
 }
 
-.card__title{
+.card__title {
   text-transform: uppercase;
   font-weight: 700;
   color: var(--text-color-dark);
 }
 
-.card__description{
+.card__description {
   text-align: center;
   color: var(--text-color-gray);
 }
 
-.gallery-section{
+.gallery-section {
   display: flex;
   flex-direction: column;
 
   gap: 20px;
   background-color: #f8f8f8;
-  
+
   padding: 100px var(--section-padding-horizontal);
   height: calc(100vh - 100px);
 }
 
-.gallery-section__header{
+.gallery-section__header {
   display: flex;
-  
+
   justify-content: space-between;
 }
 
-.gallery-section__show-more-button-container{
+.gallery-section__show-more-button-container {
   display: grid;
   place-items: center;
 }
 
-.gallery-section__gallery-container{
+.gallery-section__gallery-container {
   display: grid;
   grid-template-columns: repeat(3, 1fr);
   max-height: 100%;
@@ -195,9 +195,26 @@ strong{
   grid-template-rows: masonry;
 }
 
-.gallery-container__gallery-image{
+.gallery-container__gallery-image {
   max-width: 100%;
   border-radius: 10px;
+}
+
+.qrcode-container {
+  border-radius: 10px;
+
+  text-align: center;
+}
+
+.qrcode-container__qrcode-image {
+  background-color: rebeccapurple;
+  width: 350px;
+  border-radius: 10px;
+  border: 3px solid var(--primary-color);
+}
+
+.qrcode-container__qrcode-caption {
+  color: var(--text-color-dark);
 }
 
 /* Hovers */
