feat: Iniciando responsividade

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -344,3 +344,14 @@ small {
 .navigation-container__nav-item:active {
   scale: 1.05;
 }
+
+@media only screen and (max-width: 768px) {
+  /* For mobile phones: */
+  .main-section {
+    padding: 0;
+  }
+
+  .section-image {
+    display: none;
+  }
+}
