--- a/styles/styles.css
+++ b/styles/styles.css
@@ -348,7 +348,7 @@ small {
 
   h1 {
     text-align: center;
-    font-size: 2.1rem;
+    font-size: 2.3rem;
 
     width: 100%;
   }
@@ -357,11 +357,10 @@ small {
     flex-direction: column;
     padding: 20px;
 
-    display: grid;
-    place-items: center;
+    display: flex;
 
-    justify-content: unset;
-    gap: 0px;
+    justify-content: center;
+    gap: 20px;
     /* height: auto; */
   }
 
@@ -408,9 +407,14 @@ small {
     place-items: center;
   }
 
+  .qrcode-container {
+    display: grid;
+    place-items: center;
+  }
+
   .qrcode-container__qrcode-image {
     display: flex;
 
-    /* width: 50%; */
+    width: 90%;
   }
 }
