--- a/styles/styles.css
+++ b/styles/styles.css
@@ -55,7 +55,7 @@ strong {
 header {
   padding: 20px var(--section-padding-horizontal);
   width: calc(100vw - var(--section-padding-horizontal) * 2);
-  position: sticky;
+  position: fixed;
 
   place-items: center;
 
@@ -102,6 +102,15 @@ small {
   place-items: center;
 
   gap: 20px;
+
+  background: linear-gradient(
+      rgba(255, 255, 255, 0.95),
+      rgba(255, 255, 255, 0.95)
+    ),
+    url("../assets/images/patterns/test.jpg");
+
+  object-fit: fill;
+  background-size: 200px;
 
   padding: 10px var(--section-padding-horizontal);
   height: calc(100vh - 10px);
@@ -233,7 +242,6 @@ small {
   flex-direction: column;
 
   gap: 20px;
-  background-color: var(--section-background-dark);
 
   padding: 100px var(--section-padding-horizontal);
   height: calc(100vh - 100px);
@@ -274,6 +282,11 @@ small {
 .donation-section {
   display: flex;
   gap: 125px;
+}
+
+.donation-section {
+  background-color: white;
+  background-image: none;
 }
 
 .qrcode-container {
