feat: Imagens processadas pelo tinyPNG, estao 80% mais leves

--- a/styles/styles.css
+++ b/styles/styles.css
@@ -14,11 +14,11 @@ header {
   display: flex;
 }
 :root {
-  --primary-color-base: 0, 197, 247;
+  --primary-color-base: 0, 94, 245;
   --primary-color: rgb(var(--primary-color-base));
   --primary-color-transparent: rgba(var(--primary-color-base), 0.15);
   --text-color-dark: rgb(59, 59, 59);
-  --text-color-gray: rgb(153, 153, 153);
+  --text-color-gray: #737373;
   --section-background-dark: #f7f7f7;
   --section-padding-vertical: 10px;
   --section-padding-horizontal: 150px;
@@ -48,9 +48,6 @@ header {
   font-size: small;
   background-color: #fff;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.05);
-}
-header > span {
-  flex-grow: 1;
 }
 footer {
   padding: 25px;
@@ -103,15 +100,6 @@ small {
   border: none;
   text-decoration: none;
   font-weight: 700;
-}
-.youtube-button__icon {
-  padding: 7px;
-  margin-left: 5px;
-  aspect-ratio: 1;
-  width: 15px;
-  border-radius: 50px;
-  text-align: center;
-  border: 1px solid var(--primary-color);
 }
 .section-image {
   width: 500px;
