--- a/styles/animations.css
+++ b/styles/animations.css
@@ -1,6 +1,6 @@
 .animate {
   opacity: 0;
-  transition: all 1s ease-in-out;
+  transition: all 0.8s ease-in-out;
 
   filter: blur(5px);
   transform: translateX(-100%);
@@ -10,4 +10,11 @@
   opacity: 1;
   filter: blur(0);
   transform: translateX(0);
+}
+
+.animation-delay-1 {
+  transition-delay: 0.25s;
+}
+.animation-delay-2 {
+  transition-delay: 0.5s;
 }
